logging-sidecar-injector/deploy/inject-admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: log-annotate-webhook
  labels:
    app: log-annotate-webhook
    kind: mutator
webhooks:
  - name: log-annotate-webhook.dbs.dev
    clientConfig:
      service:
        name: log-annotate-webhook
        namespace: kube-system
        path: "/webhook/log-annotate-mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURvakNDQW9xZ0F3SUJBZ0lVRngvYll2WjhzZHFtN0syZHpLcTZ6WDFLdUNRd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2FURUxNQWtHQTFVRUJoTUNRMDR4RWpBUUJnTlZCQWdUQ1VkMVlXNW5XbWh2ZFRFU01CQUdBMVVFQnhNSgpSM1ZoYm1kYWFHOTFNUXd3Q2dZRFZRUUtFd05yT0hNeER6QU5CZ05WQkFzVEJsTjVjM1JsYlRFVE1CRUdBMVVFCkF4TUthM1ZpWlhKdVpYUmxjekFlRncweU16QTVNVEV3T1RRd01EQmFGdzB5T0RBNU1Ea3dPVFF3TURCYU1Ha3gKQ3pBSkJnTlZCQVlUQWtOT01SSXdFQVlEVlFRSUV3bEhkV0Z1WjFwb2IzVXhFakFRQmdOVkJBY1RDVWQxWVc1bgpXbWh2ZFRFTU1B [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: ["apps"]
        apiVersions: ["v1"]
        resources: ["deployments"]

    sideEffects: None
    admissionReviewVersions:
      - "v1"
    namespaceSelector:
      matchExpressions:
        - key: log-enable
          operator: In
          values:
            - "true"
